HelloUltraviolet/Fixtures/RejectedSource/Expressions/WidenTypingDiagnosticsOwnership/Expected.uv
//! Expected diagnostic metadata for the WidenTypingDiagnosticsOwnership rejected-source specimen.

expectedDiagnostic("E-TYP-2071", "req.16.WidenTypingDiagnosticsOwnershipForCastTransmute")
